saving progress - added dock for github and linkedin, still need to add links. Bug with history not showing up resurfaced...

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@ body {
 
 }
 
-#root { 
+/* #root { 
   margin: 50px auto; 
   width: 630px; 
   height: 450px; 
-}
+} */
 input:focus { outline: none; }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
